stop overflow

--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ html, body {
 	} */
 	#social {
 		padding: 2%;
-		width: 100%;
+		width: 90%;
 		display: inline-block;
 	}
 
